# SDL-n-Cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: externals.txt
scripts/: config.bat
scripts/nix/: config.sh  solution_build.sh  solution_clean.sh  solution_generate.sh
scripts/win/: config.bat  solution_build.bat  solution_clean.bat  solution_generate.bat  solution_generate_and_open.bat  solution_open.bat
source/: CMakeLists.txt  main.cpp
